index.css
#note{
    font-style:italic;
}

p, h3{
    text-align:justify;
    min-width:300px;
}

#profile-pic{
    margin:auto;
    text-align:center;
}

#profile-pic > img{
    height:180px;
    float:right;
    margin-left: 30px;
    margin-right: 30px;
    margin-top:15px;
    margin-bottom:15px;
}

.slideshow-container {
    position: relative;
    background: #f1f1f1f1;
    width:60vw;
    margin:auto;
    margin-top:15px;
    margin-bottom:15px;
    padding: 30px;
    text-align: center;
    height:90px;
}

.references{
    padding: 1.5em;
}

.references > div > div > div{
    padding-top: 0.5em;
}

